fixed some problems reported by FindBugs